samples/_failures_safe/1761084509_6cd09b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d09b93e4.c: In function ‘main’:
./samples/SAFE/__tmp_d09b93e4.c:152:21: error: ‘print’ undeclared (first use in this function); did you mean ‘printf’?
  152 |                     print
      |                     ^~~~~
      |                     printf
./samples/SAFE/__tmp_d09b93e4.c:152:21: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_d09b93e4.c:152:26: error: expected ‘;’ at end of input
  152 |                     print
      |                          ^
      |                          ;
./samples/SAFE/__tmp_d09b93e4.c:152:21: error: expected declaration or statement at end of input
  152 |                     print
      |                     ^~~~~
./samples/SAFE/__tmp_d09b93e4.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d09b93e4.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d09b93e4.c:152:21: error: expected declaration or statement at end of input
